--- a/src/app/detail-grid/detail-grid.component.html
+++ b/src/app/detail-grid/detail-grid.component.html
@@ -1,6 +1,6 @@
 <dx-data-grid [dataSource]="dataSource" [showBorders]="true">
   <dxo-editing
-    mode="cell"
+    mode="row "
     [allowAdding]="true"
     [allowUpdating]="true"
     [allowDeleting]="true"
